force-app/main/default/objects/SAC_Prestamo__c/SAC_Prestamo__c.object-meta.xml
<CustomObject>
    <description>Objeto para los registros de Préstamos (Reclamaciones Hipotecarias) SAC.</description>
    <label>Préstamo</label>
    <nameField>
        <displayFormat>PR-{000000000}</displayFormat>
        <label>Préstamo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Préstamos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>