force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_CNAE__c.field-meta.xml
<CustomField>
    <fullName>SAC_CNAE__c</fullName>
    <description>Descripción del CNAE</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CNAE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>