force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_centro_gestor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_centro_gestor__c</fullName>
    <description>Código identificador del centro gestor</description>
    <label>Código del centro gestor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>