force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_Contrato_TF7__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Contrato_TF7__c</fullName>
    <description>Nº Préstamo - Contrato TF7</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Contrato TF7</label>
    <length>23</length>
    <type>Text</type>
</CustomField>