force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_empresa_gestora__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_empresa_gestora__c</fullName>
    <description>Código identificador de la empresa gestora</description>
    <label>Código empresa gestora</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>