force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_Provincia_titular__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Provincia_titular__c</fullName>
    <description>Código de la provincia del domicilio del titular</description>
    <label>Código Provincia del titular</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>