force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_Tipo_documento_titular__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Tipo_documento_titular__c</fullName>
    <description>Tipo de persona asociada al contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código Tipo documento titular</label>
    <length>2</length>
    <type>Text</type>
</CustomField>