force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Codigo_Tipo_relacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Codigo_Tipo_relacion__c</fullName>
    <description>Código de tipo de relación de la persona en el contrato</description>
    <label>Código Tipo relación</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>