force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Empleado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Empleado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica si el titular del préstamo tiene la condición de empelado</description>
    <label>Empleado</label>
    <type>Checkbox</type>
</CustomField>