force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Entidad_migrada__c.field-meta.xml
<CustomField>
    <fullName>SAC_Entidad_migrada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que indica si la entidad de origen del préstamo ha sido o no migrada (toma los valores “SÍ” o “NO”)</description>
    <label>Entidad migrada</label>
    <type>Checkbox</type>
</CustomField>