force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Fecha_constitucion_prestamo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Fecha_constitucion_prestamo__c</fullName>
    <description>Fecha de constitución del préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha constitución préstamo</label>
    <type>Date</type>
</CustomField>