force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Garantia_Principal__c.field-meta.xml
<CustomField>
    <fullName>SAC_Garantia_Principal__c</fullName>
    <description>Descripción de la clasificación de la garantía del préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Garantía Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>