force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Id_persona_en_Origen__c.field-meta.xml
<CustomField>
    <fullName>SAC_Id_persona_en_Origen__c</fullName>
    <description>Número identificador de la persona en Origen</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Id persona en Origen</label>
    <length>13</length>
    <type>Text</type>
</CustomField>