force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Importe_capital_concedido__c.field-meta.xml
<CustomField>
    <fullName>SAC_Importe_capital_concedido__c</fullName>
    <description>Importe del capital concedido en la constitución del préstamo</description>
    <label>Importe capital concedido</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>