force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Linea_Credito__c.field-meta.xml
<CustomField>
    <fullName>SAC_Linea_Credito__c</fullName>
    <description>Descripción de la línea de crédito asociada al préstamo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Línea Crédito</label>
    <length>100</length>
    <type>Text</type>
</CustomField>