force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Prestamo_activo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Prestamo_activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que toma el valor 1 si el préstamo está activo y 0 si está inactivo (calculado en función del estado de vigencia)</description>
    <label>Préstamo activo</label>
    <type>Checkbox</type>
</CustomField>