force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Tipo_documento_titular__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo_documento_titular__c</fullName>
    <description>Descripción del tipo de documento del titular</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo documento titular</label>
    <length>100</length>
    <type>Text</type>
</CustomField>