force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Titular_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>SAC_Titular_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular Cuenta</label>
    <referenceTo>SAC_Prestamo__c</referenceTo>
    <relationshipLabel>Titulares Cuenta</relationshipLabel>
    <relationshipName>Titulares_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>