force-app/main/default/objects/SAC_Prestamo__c/fields/SAC_Titular_Prestamo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Titular_Prestamo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titular Préstamo</label>
    <referenceTo>SAC_Prestamo__c</referenceTo>
    <relationshipLabel>Titulares Préstamo</relationshipLabel>
    <relationshipName>Titulares_Prestamo</relationshipName>
    <type>Lookup</type>
</CustomField>