force-app/main/default/objects/SAC_Prestamo__c/recordTypes/SAC_Prestamo.recordType-meta.xml
<RecordType>
    <fullName>SAC_Prestamo</fullName>
    <active>true</active>
    <label>Préstamo</label>
</RecordType>