force-app/main/default/objects/SAC_Prestamo__c/recordTypes/SAC_Titular_Prestamo.recordType-meta.xml
<RecordType>
    <fullName>SAC_Titular_Prestamo</fullName>
    <active>true</active>
    <label>Titular Préstamo</label>
</RecordType>