force-app/main/default/objects/SAC_Prestamo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SAC_Codigo_Contrato__c</columns>
    <columns>SAC_Id_cuenta_actual__c</columns>
    <columns>SAC_Id_persona_en_Origen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>